<resources>
    <string name="app_name">MyLittleShoppingList2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prueba">PRUEBA</string>
    <string name="options">¿Qué desea hacer?</string>
    <string name="a_adir">Añadir</string>
    <string name="addEsta">AÑADIR TIENDAS</string>
    <string name="addProd">AÑADIR PRODUCTOS</string>
    <string name="nPro">Nombre del Producto</string>
    <string name="nEsta">Nombre</string>
    <string name="spinner">Tienda: </string>
    <string name="telf">Teléfono</string>
    <string name="direc">Dirección</string>
    <string name="produ">PRODUCTOS</string>
    <string name="esta">TIENDAS</string>
    <string name="inicio">INICIO</string>
    <string name="infoE">INFORMACIÓN DEL ESTABLECIMIENTO</string>
    <string name="infoP">INFORMACIÓN DEL PRODUCTO</string>
    <string name="precio">Precio</string>
    <string name="precio2">Precio: </string>
    <string name="canti">Cantidad</string>
    <string name="canti2">Cantidad: </string>
    <string name="urlw">URL: https//:www.ejemplo.com</string>
    <string name="btnAcepEsta">GUARDAR</string>
    <string name="nombre">Nombre :</string>
    <string name="url">Url: </string>
    <string name="tlf">Teléfono: </string>
    <string name="dire">Dirección: </string>
    <string name="btnBorrar">Borrar datos</string>
    <string name="titulo">Borrar.</string>
    <string name="dialog_button_positive">Aceptar</string>
    <string name="dialog_button_negative">Cancelar</string>
    <string name="mensaje">¿Está seguro que quiere eliminar todos los elementos?</string>
    <string name="nav_header_desc2">Navigation header</string>
    <string name="histo">HISTORIAL</string>
    <string name="open">Open</string>
    <string name="calle">Calle</string>
    <string name="av">Avenida</string>
    <string name="close">Close</string>
    <string name="btnInfo">Información</string>
    <string name="esta2">Establecimiento: </string>
    <string name="PT">Precio Total: </string>
    <string name="pt">0.00 €</string>
    <string name="am">Trabajo realizado por: </string>
    <string name="am2">Jorge Fabro García</string>
    <string name="cred">CRÉDITOS</string>
    <string name="tiendas">Tiendas:</string>
    <string name="para_a_adir_un_producto_es_necesario_crear_primero_una_tienda">Para añadir un producto es necesario crear primero una tienda.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="Carreteras">
        <item>@string/calle</item>
        <item>@string/av</item>
    </string-array>
</resources>