<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_models"
    android:layout_height="120dp"
    android:layout_marginTop="5dp">

    <RelativeLayout
        android:id="@+id/rlProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/twNombreP"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/twEstaN"
                        android:text="@string/esta2"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/twEsta"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textAllCaps="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twCantidadN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/canti2"/>

                <TextView
                    android:id="@+id/twCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:id="@+id/twPrecioN"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/precio2" />

                <TextView
                    android:id="@+id/twPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:singleLine="true"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <CheckBox
        android:layout_width="65dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_height="match_parent">

    </CheckBox>
</LinearLayout>