<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_models"
    android:layout_height="120dp"
    android:layout_marginTop="5dp">

    <RelativeLayout
        android:id="@+id/rlProductos2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/llTop2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/twNombreP2"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/twEstaN2"
                        android:text="@string/esta2"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/twEsta2"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textAllCaps="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBot2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twCantidadN2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/canti2"/>

                <TextView
                    android:id="@+id/twCantidad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:id="@+id/twPrecioN2"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/precio2" />

                <TextView
                    android:id="@+id/twPrecio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:singleLine="true"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/twMes"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="2"
            android:textSize="15sp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/twDia"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="35sp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/twAnyo"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>